testing/ShouldFail/repeatedVar.gp
file:"a"
%%
func(){
    float a = 0.0;
    float a = 3.0;
    return a;
}